Added Fixtures,teams,standings and topScorer routes
