# backend/src/routes/matchRoutes.js
@@ -3,11 +3,14 @@ const router = new express.Router();
 const authentication = require('../middlewares/auth');
 
 const {
-    liveFixtures,
-    futureFixtures,
-    pastFixtures
+    fixtures,
+    teams,
+    standings,
+    topScorer
 } = require('../controllers/matchController');
-router.get('/liveFixtures', liveFixtures);
-router.get('/futureFixtures', futureFixtures);
-router.get('/pastFixtures', pastFixtures);
+
+router.get('/fixtures', authentication.verifyToken, fixtures);
+router.get('/teams',authentication.verifyToken, teams);
+router.get('/standings',authentication.verifyToken, standings);
+router.get('/topScorer',authentication.verifyToken, topScorer);
 module.exports = router;
